--- a/OCR_tesseract/index.html
+++ b/OCR_tesseract/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="app" >
             <input type="file" ref="file" v-on:change="onChange"><br><br>
-            <img v-bind:src="image" accept="image/*" style="border: solid 1px" class="img" v-on:mouseenter="onMouseEnter">
+            <img id="img1" v-bind:src="image" accept="image/*" style="border: solid 1px" class="img" v-on:mouseenter="onMouseEnter">
             <br>
             ▪️読み込み結果
             <div name="result" style="border: solid 1px">
@@ -19,5 +19,6 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.js"></script>
     <script src="main.js"></script>
     <script src='https://cdn.rawgit.com/naptha/tesseract.js/1.0.10/dist/tesseract.js'></script>    
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </body>
 </html>
